fdo#58693 ODBC SQLGetData returns byte length, not data size

Change-Id: Icd2f6503d9452c36f858180e4193af993ae7e288